src/css/groups/GroupTabs.css
.tab {
  float: right;
  right: 0px;
  margin-right: -26px;
  width: 100%;
  padding-top: 1em;
  text-align: right;
  padding-right: 5%;
  border: 1px solid #00000000;
  transition: 0.06s linear;
  margin-bottom: -1px;
}

.tab.active {
  border: 1px solid var(--gray2);
  border-right: 1px solid var(--light);
  transition: 0.06s linear;
}

.tab:hover {
  cursor: pointer;
  border-bottom: 1px solid var(--gray2);
  border-left: 1px solid var(--gray2);
  transition: 0.06s linear;
}

.tab a {
  box-shadow: none;
}

.tab a:hover {
  box-shadow: none;
}

@media (max-width: 1000px) {
  .sidebar {
    display: grid;
    position: relative;
  }

  .sidebar h1 {
    grid-column: 1 / -1;
  }

  .tab {
    padding-left: 5%;
    text-align: left;
    font-size: 0.6em;
  }

  .tab.active {
    border: 1px solid var(--gray2);
  }
}

